# ipyclaude

./: .gitignore  CHANGELOG.md  DEV.md  README.md  pyproject.toml
.agents/skills/ex/: SKILL.md
.agents/skills/exhash/: SKILL.md
.agents/skills/ipyai-help/: SKILL.md
ipyai/: __init__.py  cli.py  core.py
ipyclaude/: cli.py  core.py
tests/: test_core.py
